--- a/css/styles.css
+++ b/css/styles.css
@@ -389,7 +389,7 @@ img{
 .teammate{
   background-color: var(--background-color);
   margin-right: 30px;
-  padding-bottom: 16px;
+  
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   /* outline: 2px solid tomato; */
 }
@@ -400,7 +400,7 @@ img{
 
 .team-division{
   /* outline: 2px solid tomato; */
-margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 .teammate-section{
@@ -434,16 +434,18 @@ margin-bottom: 30px;
 
 .socials-list{
   list-style: none;
+  display: flex;
+  padding-bottom: 30px;
 }
 
 .social-link{
   text-decoration: none;
-  
+  outline: 2px solid tomato;
 
 }
 
 .socials-icon{
-  color: #000000;
+  /* background-color: #000000; */
 }
 
 
@@ -485,7 +487,7 @@ margin-bottom: 30px;
   display: block;
   content: "";
   height: 60px; 
-  background-image: url(../images/first-logo.svg);
+  background-image: url(../images/fifth-logo.svg);
   background-size:  contain;
   background-repeat: no-repeat;
   background-position: center; 
