--- a/css/styles.css
+++ b/css/styles.css
@@ -144,33 +144,12 @@ h1,h2,h3,h4,h5,h6,p{
   display: block;
   /* outline: 2px solid tomato; */
   color: var(--primary-text-color); 
+
 }
 
-.header-mail::before{
-  content: url("./images/sprite.svg#envelope.svg");
-  width: 20px;
-  height: 16px;
+.header-icon{
   margin-right: 10px;
-  /* background-image: url("../images/envelope.svg"); */
-  background-size: contain;
-}
-
-.header-phone{
-  text-decoration: none;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  display: block;
-  /* outline: 2px solid tomato; */
-  color: var(--primary-text-color); 
-}
-
-.header-phone::before{
-  content: url("../images/smartphone.svg");
-  width: 10px;
-  height: 16px;
-  margin-right: 10px;
-  /* background-image: url("../images/envelope.svg"); */
-  background-size: contain;
+ fill: currentColor;
 }
 
 
@@ -272,44 +251,22 @@ margin-right: auto;
   padding-left: 0%; 
 }
 
+.features-division{
+  width: 270px;
+  height: 120px;
+
+  padding: 25px 100px;
+
+  margin-bottom: 30px;
+  background: #F5F4FA;
+  border-radius: 4px;
+}
 
 .features-container{
   margin-right: 30px;
   width: 270px;
-  /* outline: 2px solid tomato; */
-}
-
-.features-container:last-child{
-  margin-right: 0;
-}
-
-.features-container::before{
-  display: block;
-  content: "";
-  height: 120px;
-  border-radius: 4px;
-  margin-bottom: 30px;
-  background-color: var(--team-n-buttons-color);
   
-   background-size: 70px, 70px, contain;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.features-container:nth-child(1)::before{ 
-  background-image: url(../images/antenna.svg);
-}
-
-.features-container:nth-child(2)::before{ 
-  background-image: url(../images/clock.svg);
-}
-
-.features-container:nth-child(3)::before{ 
-  background-image: url(../images/diagram.svg);
-}
-
-.features-container:nth-child(4)::before{ 
-  background-image: url(../images/astronaut.svg);
+  /* outline: 2px solid tomato; */
 }
 
 .features-subtitle {
@@ -483,43 +440,31 @@ fill: var(--background-color);
   justify-content:center;
 }
 
-
-.customer{
-  box-sizing: border-box;
-  
-  width: 170px;
-  height: 92px;
-  
-  padding: 16px 32px;
-
-  margin-right: 30px;
-  border: 1px solid var(--border-color);
-  border-radius: 4px;
-
-  display: flex;
-  justify-content:center;
-}
-
-.customer:last-child{
-  margin: 0;
-}
-
-.customer-logo{
- outline: 2px solid tomato;
-}
-
 .customer-link{
-   outline: 2px solid tomato;
-  width: 106px;
-  display: block;
-  content: "";
-  height: 60px; 
-  background-image: url(../images/fifth-logo.svg);
+   /* outline: 2px solid tomato; */
+
+   width: 170px;
+   height: 92px;
+
+   display: flex;
+   justify-content:center;
+  align-items: center;
+  fill: var(--primary-text-color);
+  margin-right: 30px;
+  border: 1px solid var(--icon-color);
+  border-radius: 4px;
+  
+
   background-size:  contain;
   background-repeat: no-repeat;
   background-position: center; 
 }
 
+.customer-link:hover,
+.customer-link:focus{
+  fill: var(--accent-color);
+  border-color: var(--accent-color);
+}
 
 
 .footer{
@@ -577,12 +522,25 @@ fill: var(--background-color);
   color:var(--footer-links-color); 
 }
 
+.footer-invitation{
+  width: 206px;
+  height: 80px;
+  
+  }
+  
+  .footer-socials{
+  
+    
+  }
+
+
+
 .navigation-link:hover,
 .navigation-link:focus,
 .header-mail:hover,
 .header-mail:focus,
-.header-phone:hover,
-.header-phone:focus,
+.header-icon:hover,
+.header-icon:focus,
 .footer-link:hover, 
 .footer-link:focus{
   color: var(--accent-color);
@@ -709,3 +667,4 @@ fill: var(--background-color);
   line-height: 1.85;
   letter-spacing: 0.03em;
 }
+
