--- a/css/styles.css
+++ b/css/styles.css
@@ -698,6 +698,11 @@ fill: var(--background-color);
   /* outline: 2px solid tomato; */
 }
 
+.our-work-img{
+  display: block;
+  max-width: 370px;
+}
+
 .our-work-item:hover,
 .our-work-item:focus{
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
