--- a/css/styles.css
+++ b/css/styles.css
@@ -10,8 +10,7 @@
   --border-color: #ECECEC;
   --footer-links-color:rgba(255, 255, 255, 0.6);
   --icon-color:#AFB1B8;
-  --footer-socials-color:rgba(255, 255, 255, 0.1);
-  
+  --footer-socials-color:rgba(255, 255, 255, 0.1); 
 }
 
 body{
@@ -154,22 +153,16 @@ h1,h2,h3,h4,h5,h6,p{
  
   display: flex;
   align-items: center;
-
-
-   
+  
   color: var(--primary-text-color); 
   /* outline: 2px solid tomato; */
-
 }
-
-
 
 .header-icon{
   margin-right: 10px; 
 
   fill: currentColor;
 }
-
 
 .header-contacts-list{
   text-decoration: none;
@@ -387,11 +380,9 @@ img{
 }
 
 .teammate-section{
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding: 30px 32px;
   /* outline: 2px solid tomato; */
 }
-
 
 .our-team-name{
   font-size: 16px;
@@ -420,8 +411,7 @@ img{
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-left: 0;
-  padding: 0 32px;
+  padding-left: 0; 
 }
 
 .socials-item:not(:last-child){
@@ -437,6 +427,7 @@ img{
   height: 44px;
   background-color: var(--background-color);
   border-radius:50%;
+  
   /* outline: 2px solid tomato; */
 }
 
@@ -454,6 +445,14 @@ img{
 fill: var(--background-color);
 }
 
+.customer{
+  margin-right: 30px;
+}
+
+.customer:last-child{
+  margin-right: 0;
+}
+
 .customers-list{
   display: flex;
 }
@@ -465,7 +464,7 @@ fill: var(--background-color);
    display: flex;
    justify-content:center;
    align-items: center;
-   margin-right: 30px;
+   /* margin-right: 30px; */
    outline: transparent;
    border: 1px solid var(--icon-color);
    border-radius: 4px;
@@ -482,7 +481,6 @@ fill: var(--background-color);
   fill: var(--accent-color);
   border-color: var(--accent-color);
 }
-
 
 .footer{
   padding-top:60px;
@@ -508,7 +506,6 @@ fill: var(--background-color);
 .logo-footer{
   color: var(--background-color);
 }
-
 
 .footer-list{
   font-size: 14px;
@@ -554,7 +551,7 @@ fill: var(--background-color);
 
 .footer-invitation{
  margin: 0;
-  }
+}
 
 .invitation-row{
   font-style: normal;
@@ -575,8 +572,8 @@ fill: var(--background-color);
 }
 
 .footer-socials-item:not(:last-child){
-  margin-right: 10px;}
-
+  margin-right: 10px;
+}
 
 .footer-socials-link{
   text-decoration: none;
@@ -701,15 +698,14 @@ fill: var(--background-color);
 .our-work-img{
   display: block;
   max-width: 370px;
+  list-style: none;
+  text-decoration: none;
 }
 
 .our-work-item:hover,
 .our-work-item:focus{
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-
-
-
 
 .our-work-card{
   padding: 20px 24px;
